using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PrefConst : MonoBehaviour
{
    public const string Weapon_Player_ID = "weapon_id";
    public const string COIN_KEY = "coins";
    public const string Hair_Player_ID = "hair_id";
    public const string Pant_Player_ID = "pant_id";
    public const string Color_Player_ID = "color_id";
    public const string Run_Anim = "run";
    public const string Idle_Anim = "idle";
    public const string Attack_Anim = "attack";
    public const string Dead_Anim = "die";
}
